# orbit

./: .env.example  .gitignore  .gitleaks.toml  Cargo.toml  README.md  deny.toml  justfile  pnpm-lock.yaml  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  deploy.yaml  nightly-audit.yaml  pre-merge-gitleaks.yaml
backend/api/: openapi.yaml
backend/binaries/orbit/: Cargo.toml
backend/binaries/orbit/src/: main.rs
backend/crates/orbit-api/: Cargo.toml
backend/crates/orbit-api/src/: audit.rs  error.rs  hibp.rs  lib.rs  router.rs  state.rs
backend/crates/orbit-api/src/handlers/: auth.rs  consent.rs  current_prices.rs  dashboard.rs  dashboard_m720.rs  dashboard_paper_gains.rs  espp_purchases.rs  fx.rs  grants.rs  health.rs  mod.rs  modelo_720_inputs.rs  residency.rs  rule_set_chip.rs  trips.rs  user_tax_preferences.rs  vesting_events.rs
backend/crates/orbit-api/src/middleware/: csrf.rs  mod.rs  onboarding.rs  rate_limit.rs  request_id.rs  security_headers.rs  session.rs
backend/crates/orbit-api/src/residency/: autonomias.rs  mod.rs
backend/crates/orbit-api/tests/: audit_allowlist_sweep_slice_3.rs  auth_flow.rs  cross_tenant_slice_2.rs  cross_tenant_slice_3.rs  current_prices_flow.rs  dashboard_stacked.rs  espp_flow.rs  fx_flow.rs  grants_flow.rs  m720_flow.rs  m720_threshold_flow.rs  paper_gains_flow.rs  rule_set_chip_flow.rs  sessions_flow.rs  trips_flow.rs  user_tax_preferences_flow.rs  vesting_event_override_flow.rs  wizard_flow.rs
backend/crates/orbit-api/tests/common/: mod.rs
backend/crates/orbit-auth/: Cargo.toml
backend/crates/orbit-auth/src/: lib.rs  password.rs  session.rs
backend/crates/orbit-core/: Cargo.toml
backend/crates/orbit-core/src/: lib.rs  money.rs  paper_gains.rs  sell_to_cover.rs  stacked_grants.rs  vesting.rs
backend/crates/orbit-core/tests/: paper_gains_fixtures.rs  paper_gains_property.rs  sell_to_cover_fixtures.rs  sell_to_cover_property.rs  stacked_grants_fixtures.rs  stacked_grants_property.rs  vesting_fixtures.rs  vesting_override_fixtures.rs  vesting_override_property.rs  vesting_property.rs
backend/crates/orbit-core/tests/fixtures/: paper_gains_cases.json  sell_to_cover_cases.json  stacked_grants_cases.json  vesting_cases.json  vesting_override_cases.json
backend/crates/orbit-crypto/: Cargo.toml
backend/crates/orbit-db/: Cargo.toml
backend/crates/orbit-db/src/: art_7p_trips.rs  espp_purchases.rs  fx_rates.rs  grant_current_price_overrides.rs  grants.rs  lib.rs  modelo_720_inputs.rs  residency.rs  sessions_mgmt.rs  ticker_current_prices.rs  tx.rs  user_tax_preferences.rs  vesting_events.rs
backend/crates/orbit-db/tests/: rls_cross_tenant.rs
backend/crates/orbit-export/: Cargo.toml
backend/crates/orbit-fx/: Cargo.toml
backend/crates/orbit-log/: Cargo.toml
backend/crates/orbit-log/src/: lib.rs
backend/crates/orbit-log/tests/: positive.rs
backend/crates/orbit-log/tests/compile_fail/: calculation.rs  calculation.stderr  export.rs  export.stderr  grant.rs  grant.stderr  money.rs  money.stderr  raw_str.rs  raw_str.stderr  scenario.rs  scenario.stderr  sell_now_input.rs  sell_now_input.stderr
backend/crates/orbit-market-data/: Cargo.toml
backend/crates/orbit-tax-core/: Cargo.toml
backend/crates/orbit-tax-rules/: Cargo.toml
backend/crates/orbit-tax-spain/: Cargo.toml
backend/crates/orbit-worker/: Cargo.toml
backend/crates/orbit-worker/src/: fx.rs  lib.rs  scheduler.rs
backend/xtask/: Cargo.toml
backend/xtask/src/: main.rs
backend/xtask/tests/: check_regression.rs
docs/: implementation-handoff.md
docs/adr/: ADR-001-tech-stack-baseline.md  ADR-002-cloud-provider-and-deployment-topology.md  ADR-003-hybrid-tax-engine-architecture.md  ADR-004-rule-set-versioning-and-traceability.md  ADR-005-data-model-outline.md  ADR-006-market-data-vendor-selection.md  ADR-007-fx-source-ecb-integration.md  ADR-008-export-traceability.md  ADR-009-frontend-architecture.md  ADR-010-api-contract-shape.md  ADR-011-authentication-session-mfa.md  ADR-012-rule-set-pipeline-and-engine-contract.md  ADR-013-repository-and-deployment-scaffold.md  ADR-014-slice-1-technical-design.md  ADR-015-slice-0-local-first-scope-split.md  ADR-016-slice-2-technical-design.md  ADR-017-slice-3-technical-design.md  ADR-018-slice-3b-technical-design.md  README.md
docs/design/: orbit-v1-ui-proposal.md  style-guide.md
docs/design/screens/: art-7p-trip-form.html  dashboard-slice-1.html  dashboard-slice-3.html  dashboard.html  dsr-self-service.html  espp-purchase-form.html  export-confirm-modal.html  export.html  first-grant-form.html  grant-detail-vesting-editor.html  grant-detail.html  modelo-720-inputs.html  multi-grant-dashboard.html  password-reset.html  profile-tax-preferences.html  residency-setup.html  rule-set-chip.html  scenario-modeler.html  sell-now.html  session-management.html  shared.css  (+4 more)
docs/requirements/: open-questions-resolved.md  slice-1-acceptance-criteria.md  slice-2-acceptance-criteria.md  slice-3-acceptance-criteria.md  slice-3b-acceptance-criteria.md  v1-slice-plan.md
docs/security/: security-checklist-slice-0.md  security-requirements.md  threat-model.md
docs/specs/: orbit-v1-persona-b-spain.md
frontend/: .eslintrc.cjs  .gitignore  index.html  lingui.config.ts  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/docs/: cors.md
frontend/e2e/: slice-1-auth.spec.ts  slice-1-demo.spec.ts  slice-2-demo.spec.ts  slice-3-demo.spec.ts
frontend/src/: i18n.ts  lingui.d.ts  main.tsx
infra/caddy/: Caddyfile
infra/nftables/: orbit.nft
infra/runbooks/: deploy.md  dev-setup.md  github-setup.md  incident-response.md  restore-postgres.md
infra/systemd/: orbit-migrate.service
migrations/: 20260418120000_init.sql  20260425120000_slice_1.sql  20260502120000_t13a_session_lookup.sql  20260509120000_harden_security_definer_search_path.sql  20260516120000_slice_2.sql  20260523120000_slice_3.sql  20260530120000_slice_3b.sql
scripts/ci/: release.sh
scripts/dev/: docker-compose.yaml  gen-tls-cert.sh  install-hooks.sh  pg_hba.conf  pre-commit.sh  seed.sh
(+124 files in other folders)
