[workspace]
# Resolver v3: MSRV-aware. Picks dependency versions compatible with
# `workspace.package.rust-version` below, so transitive pulls like
# `cookie` → `time` don't resolve to a crate that demands a newer rustc
# (e.g. `time` 0.3.47 requires 1.88). Cargo ≥ 1.84 supports v3; our
# `rust-toolchain.toml` pins 1.86, which is fine.
resolver = "3"
members = [
    "backend/crates/orbit-core",
    "backend/crates/orbit-crypto",
    "backend/crates/orbit-db",
    "backend/crates/orbit-log",
    "backend/crates/orbit-auth",
    "backend/crates/orbit-api",
    "backend/crates/orbit-worker",
    "backend/crates/orbit-tax-core",
    "backend/crates/orbit-tax-rules",
    "backend/crates/orbit-tax-spain",
    "backend/crates/orbit-market-data",
    "backend/crates/orbit-fx",
    "backend/crates/orbit-export",
    "backend/binaries/orbit",
    "backend/xtask",
]

[workspace.package]
edition = "2021"
# Kept in lockstep with `rust-toolchain.toml`. Bumped 1.86 → 1.88 to unblock
# `time 0.3.47+` (RUSTSEC-2026-0009 fix; pulled transitively by `cookie`).
rust-version = "1.88"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
# --- Auth / crypto primitives (T7 — Slice 0a). Versions pinned to what sqlx
# already pulls in transitively where possible, to minimize tree growth.
# ADR-011 names the `argon2` + `rand` + `subtle` stack explicitly.
argon2 = "0.5"
hmac = "0.12"
sha1 = "0.10"          # HIBP k-anonymity only (ADR-011); not used for integrity.
sha2 = "0.10"
rand = "0.8"           # OsRng for CSPRNG, per ADR-011
subtle = "2"
cookie = "0.18"
# base64 (not base64ct): already in the tree via other RustCrypto deps; chosen
# over base64ct because ADR-011's 43-char base64url session IDs need
# URL_SAFE_NO_PAD, which `base64::engine::general_purpose::URL_SAFE_NO_PAD`
# provides directly and is the de-facto default across the ecosystem.
base64 = "0.22"
# --- Slice 1 (T9) additions.
# chrono already pulled transitively via sqlx; promote to a workspace dep so
# the vesting module and handlers speak the same `NaiveDate` / `DateTime` API.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "set-header", "timeout", "trace", "util"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
async-trait = "0.1"
futures-util = "0.3"
# --- Slice 1 (T15 QA) additions.
# proptest 1.11 declares `rust-version = 1.85`; compatible with the workspace
# MSRV (1.86). Used as a dev-dependency on orbit-core only (property suite
# for derive_vesting_events — ADR-014 §7).
proptest = "1"
