[package]
name = "orbit"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "orbit"
path = "src/main.rs"

[dependencies]
orbit-api    = { path = "../../crates/orbit-api" }
orbit-db     = { path = "../../crates/orbit-db" }
orbit-log    = { path = "../../crates/orbit-log" }
orbit-worker = { path = "../../crates/orbit-worker" }

clap.workspace = true
tokio.workspace = true
axum.workspace = true
hex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
