[package]
name = "orbit-auth"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
argon2 = { workspace = true, features = ["std", "password-hash"] }
rand.workspace = true
sha2.workspace = true
subtle.workspace = true
cookie.workspace = true
base64.workspace = true
thiserror.workspace = true
