[package]
name = "orbit-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Gates tests that require a live Postgres (see `src/tx.rs` integration module).
# Off by default so `cargo test --workspace` is Postgres-free on a fresh clone.
integration-tests = []

[dependencies]
sqlx.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
# art_7p_trips.eligibility_criteria is a JSONB column carried across the
# crate boundary as a serde_json::Value (handler-layer shape validation per
# ADR-016 §9.1). Already in the tree via orbit-api → audit.rs.
serde_json.workspace = true
orbit-core = { path = "../orbit-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# `sqlx` and `uuid` are already in [dependencies] and are re-used by the
# integration test harness in `tests/rls_cross_tenant.rs`; no additional
# dev-deps needed. The `uuid::Uuid::new_v4()` call requires the `v4` feature
# which the workspace pin already enables (see root Cargo.toml).
