[package]
name = "orbit-log"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
trybuild = "1"
orbit-core = { path = "../orbit-core" }
orbit-tax-core = { path = "../orbit-tax-core" }
