[package]
name = "orbit-worker"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Workspace crates.
orbit-db  = { path = "../orbit-db" }
orbit-log = { path = "../orbit-log" }

# Async runtime + outbound.
tokio.workspace = true
reqwest.workspace = true
sqlx.workspace = true

# Domain primitives.
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
